; ModuleID = '/home/carl/AnghaBench/systemd/src/nspawn/extr_nspawn-oci.c_oci_cgroup_device_access.c'
source_filename = "/home/carl/AnghaBench/systemd/src/nspawn/extr_nspawn-oci.c_oci_cgroup_device_access.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device_data = type { i32, i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"Unknown device access character '%c'.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i32, i8*)* @oci_cgroup_device_access to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @oci_cgroup_device_access(i8* %0, i32* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca %struct.device_data*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = bitcast i8* %16 to %struct.device_data*
  store %struct.device_data* %17, %struct.device_data** %10, align 8
  store i32 0, i32* %11, align 4
  store i32 0, i32* %12, align 4
  store i32 0, i32* %13, align 4
  %18 = load i32*, i32** %7, align 8
  %19 = call i8* @json_variant_string(i32* %18)
  store i8* %19, i8** %14, align 8
  %20 = call i32 @assert_se(i8* %19)
  store i64 0, i64* %15, align 8
  br label %21

21:                                               ; preds = %64, %4
  %22 = load i8*, i8** %14, align 8
  %23 = load i64, i64* %15, align 8
  %24 = getelementptr inbounds i8, i8* %22, i64 %23
  %25 = load i8, i8* %24, align 1
  %26 = icmp ne i8 %25, 0
  br i1 %26, label %27, label %67

27:                                               ; preds = %21
  %28 = load i8*, i8** %14, align 8
  %29 = load i64, i64* %15, align 8
  %30 = getelementptr inbounds i8, i8* %28, i64 %29
  %31 = load i8, i8* %30, align 1
  %32 = sext i8 %31 to i32
  %33 = icmp eq i32 %32, 114
  br i1 %33, label %34, label %35

34:                                               ; preds = %27
  store i32 1, i32* %11, align 4
  br label %63

35:                                               ; preds = %27
  %36 = load i8*, i8** %14, align 8
  %37 = load i64, i64* %15, align 8
  %38 = getelementptr inbounds i8, i8* %36, i64 %37
  %39 = load i8, i8* %38, align 1
  %40 = sext i8 %39 to i32
  %41 = icmp eq i32 %40, 119
  br i1 %41, label %42, label %43

42:                                               ; preds = %35
  store i32 1, i32* %12, align 4
  br label %62

43:                                               ; preds = %35
  %44 = load i8*, i8** %14, align 8
  %45 = load i64, i64* %15, align 8
  %46 = getelementptr inbounds i8, i8* %44, i64 %45
  %47 = load i8, i8* %46, align 1
  %48 = sext i8 %47 to i32
  %49 = icmp eq i32 %48, 109
  br i1 %49, label %50, label %51

50:                                               ; preds = %43
  store i32 1, i32* %13, align 4
  br label %61

51:                                               ; preds = %43
  %52 = load i32*, i32** %7, align 8
  %53 = load i32, i32* %8, align 4
  %54 = load i32, i32* @EINVAL, align 4
  %55 = call i32 @SYNTHETIC_ERRNO(i32 %54)
  %56 = load i8*, i8** %14, align 8
  %57 = load i64, i64* %15, align 8
  %58 = getelementptr inbounds i8, i8* %56, i64 %57
  %59 = load i8, i8* %58, align 1
  %60 = call i32 @json_log(i32* %52, i32 %53, i32 %55, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i8 signext %59)
  store i32 %60, i32* %5, align 4
  br label %77

61:                                               ; preds = %50
  br label %62

62:                                               ; preds = %61, %42
  br label %63

63:                                               ; preds = %62, %34
  br label %64

64:                                               ; preds = %63
  %65 = load i64, i64* %15, align 8
  %66 = add i64 %65, 1
  store i64 %66, i64* %15, align 8
  br label %21

67:                                               ; preds = %21
  %68 = load i32, i32* %11, align 4
  %69 = load %struct.device_data*, %struct.device_data** %10, align 8
  %70 = getelementptr inbounds %struct.device_data, %struct.device_data* %69, i32 0, i32 0
  store i32 %68, i32* %70, align 4
  %71 = load i32, i32* %12, align 4
  %72 = load %struct.device_data*, %struct.device_data** %10, align 8
  %73 = getelementptr inbounds %struct.device_data, %struct.device_data* %72, i32 0, i32 1
  store i32 %71, i32* %73, align 4
  %74 = load i32, i32* %13, align 4
  %75 = load %struct.device_data*, %struct.device_data** %10, align 8
  %76 = getelementptr inbounds %struct.device_data, %struct.device_data* %75, i32 0, i32 2
  store i32 %74, i32* %76, align 4
  store i32 0, i32* %5, align 4
  br label %77

77:                                               ; preds = %67, %51
  %78 = load i32, i32* %5, align 4
  ret i32 %78
}

declare dso_local i32 @assert_se(i8*) #1

declare dso_local i8* @json_variant_string(i32*) #1

declare dso_local i32 @json_log(i32*, i32, i32, i8*, i8 signext) #1

declare dso_local i32 @SYNTHETIC_ERRNO(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
